@@ -1,98 +1,106 @@
 package com.map.pathfinder.algorithm;
 
-import com.map.pathfinder.model.*;
 import java.util.*;
+import com.graphhopper.storage.BaseGraph;
+import com.graphhopper.storage.NodeAccess;
+import com.graphhopper.util.EdgeExplorer;
+import com.graphhopper.util.EdgeIterator;
+import com.map.pathfinder.dto.PathResult;
 
 public class AStarAlgorithm {
+    public static PathResult find(BaseGraph graph, int start, int end) {
 
-    public static PathResult findPath(Graph graph, Node start, Node end) {
-        Map<Node, Double> gScore = new HashMap<>();
-        Map<Node, Double> fScore = new HashMap<>();
-        Map<Node, Node> previous = new HashMap<>();
-        PriorityQueue<NodeScore> openSet = new PriorityQueue<>(
-                Comparator.comparingDouble(NodeScore::getFScore)
-        );
-        List<Node> visitedOrder = new ArrayList<>();
-        Set<Node> visited = new HashSet<>();
+        NodeAccess nodeAccess = graph.getNodeAccess();
+        EdgeExplorer explorer = graph.createEdgeExplorer();
 
-        // Initialize
-        for (Node node : graph.getNodes()) {
-            gScore.put(node, Double.POSITIVE_INFINITY);
-            fScore.put(node, Double.POSITIVE_INFINITY);
-        }
+        Map<Integer, Double> gScore = new HashMap<>();
+        Map<Integer, Double> fScore = new HashMap<>();
+        Map<Integer, Integer> cameFrom = new HashMap<>();
+
+        PriorityQueue<NodeScore> openSet =
+                new PriorityQueue<>(Comparator.comparingDouble(NodeScore::fScore));
+
+        List<Integer> visitedOrder = new ArrayList<>();
+        Set<Integer> closedSet = new HashSet<>();
 
         gScore.put(start, 0.0);
-        fScore.put(start, heuristic(start, end));
-        openSet.offer(new NodeScore(start, fScore.get(start)));
+        fScore.put(start, heuristic(start, end, nodeAccess));
+
+        openSet.add(new NodeScore(start, fScore.get(start)));
 
         while (!openSet.isEmpty()) {
             NodeScore current = openSet.poll();
-            Node currentNode = current.getNode();
+            int currentNode = current.nodeId();
 
-            if (visited.contains(currentNode)) continue;
+            if (closedSet.contains(currentNode)) continue;
 
-            visited.add(currentNode);
+            closedSet.add(currentNode);
             visitedOrder.add(currentNode);
 
-            if (currentNode.equals(end)) {
-                break;
-            }
+            if (currentNode == end) break;
 
-            for (Edge edge : graph.getNeighbors(currentNode)) {
-                Node neighbor = edge.getTarget();
-                double tentativeGScore = gScore.get(currentNode) + edge.getWeight();
+            EdgeIterator it = explorer.setBaseNode(currentNode);
+            while (it.next()) {
+                int neighbor = it.getAdjNode();
+                double tentativeG =
+                        gScore.get(currentNode) + it.getDistance();
 
-                if (tentativeGScore < gScore.get(neighbor)) {
-                    previous.put(neighbor, currentNode);
-                    gScore.put(neighbor, tentativeGScore);
-                    fScore.put(neighbor, tentativeGScore + heuristic(neighbor, end));
-                    openSet.offer(new NodeScore(neighbor, fScore.get(neighbor)));
+                if (tentativeG < gScore.getOrDefault(neighbor, Double.MAX_VALUE)) {
+                    cameFrom.put(neighbor, currentNode);
+                    gScore.put(neighbor, tentativeG);
+
+                    double f =
+                            tentativeG + heuristic(neighbor, end, nodeAccess);
+                    fScore.put(neighbor, f);
+
+                    openSet.add(new NodeScore(neighbor, f));
                 }
             }
         }
 
-        List<Node> path = reconstructPath(previous, start, end);
-        return new PathResult(path, visitedOrder, gScore.get(end));
+        List<Integer> path = reconstructPath(cameFrom, start, end);
+
+        return new PathResult(
+                path,
+                visitedOrder,
+                gScore.getOrDefault(end, 0.0)
+        );
     }
 
-    private static double heuristic(Node a, Node b) {
-        // Haversine distance
-        double R = 6371000; // Earth radius in meters
-        double lat1 = Math.toRadians(a.getLat());
-        double lat2 = Math.toRadians(b.getLat());
-        double dLat = Math.toRadians(b.getLat() - a.getLat());
-        double dLon = Math.toRadians(b.getLon() - a.getLon());
 
-        double hav = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-                Math.cos(lat1) * Math.cos(lat2) *
-                        Math.sin(dLon / 2) * Math.sin(dLon / 2);
+    private static double heuristic(int a, int b, NodeAccess na) {
+        double lat1 = Math.toRadians(na.getLat(a));
+        double lon1 = Math.toRadians(na.getLon(a));
+        double lat2 = Math.toRadians(na.getLat(b));
+        double lon2 = Math.toRadians(na.getLon(b));
 
-        double c = 2 * Math.atan2(Math.sqrt(hav), Math.sqrt(1 - hav));
-        return R * c;
+        double dLat = lat2 - lat1;
+        double dLon = lon2 - lon1;
+
+        double h = Math.sin(dLat / 2) * Math.sin(dLat / 2)
+                + Math.cos(lat1) * Math.cos(lat2)
+                * Math.sin(dLon / 2) * Math.sin(dLon / 2);
+
+        return 2 * 6371000 * Math.atan2(Math.sqrt(h), Math.sqrt(1 - h));
     }
 
-    private static List<Node> reconstructPath(Map<Node, Node> previous, Node start, Node end) {
-        List<Node> path = new ArrayList<>();
-        Node current = end;
 
-        while (current != null) {
-            path.add(0, current);
-            current = previous.get(current);
+    private static List<Integer> reconstructPath(
+            Map<Integer, Integer> cameFrom,
+            int start,
+            int end
+    ) {
+        LinkedList<Integer> path = new LinkedList<>();
+        Integer curr = end;
+
+        while (curr != null) {
+            path.addFirst(curr);
+            curr = cameFrom.get(curr);
         }
 
-        return path.isEmpty() || !path.get(0).equals(start) ? new ArrayList<>() : path;
+        return path.getFirst() == start ? path : List.of();
     }
 
-    private static class NodeScore {
-        private final Node node;
-        private final double fScore;
 
-        public NodeScore(Node node, double fScore) {
-            this.node = node;
-            this.fScore = fScore;
-        }
-
-        public Node getNode() { return node; }
-        public double getFScore() { return fScore; }
-    }
+    private record NodeScore(int nodeId, double fScore) {}
 }
