@@ -1,93 +1,105 @@
 package com.map.pathfinder.algorithm;
 
-import com.map.pathfinder.model.*;
 import java.util.*;
+import com.graphhopper.storage.BaseGraph;
+import com.graphhopper.storage.NodeAccess;
+import com.graphhopper.util.EdgeExplorer;
+import com.graphhopper.util.EdgeIterator;
+import com.map.pathfinder.dto.PathResult;
+
 
 public class BestFirstSearchAlgorithm {
+    private record NodeHeuristic(int nodeId, double heuristic) {}
 
-    public static PathResult findPath(Graph graph, Node start, Node end) {
-        PriorityQueue<NodeHeuristic> openSet = new PriorityQueue<>(
-                Comparator.comparingDouble(NodeHeuristic::getHeuristic)
-        );
-        Map<Node, Node> previous = new HashMap<>();
-        Set<Node> visited = new HashSet<>();
-        List<Node> visitedOrder = new ArrayList<>();
+    public static PathResult find(BaseGraph graph, int start, int end) {
 
-        openSet.offer(new NodeHeuristic(start, heuristic(start, end)));
+        NodeAccess nodeAccess = graph.getNodeAccess();
+        EdgeExplorer explorer = graph.createEdgeExplorer();
+
+        PriorityQueue<NodeHeuristic> openSet =
+                new PriorityQueue<>(Comparator.comparingDouble(NodeHeuristic::heuristic));
+
+        Set<Integer> visited = new HashSet<>();
+        Map<Integer, Integer> cameFrom = new HashMap<>();
+        Map<Integer, Double> distance = new HashMap<>();
+        List<Integer> visitedOrder = new ArrayList<>();
+
+        openSet.add(new NodeHeuristic(
+                start,
+                heuristic(start, end, nodeAccess)
+        ));
+        distance.put(start, 0.0);
 
         while (!openSet.isEmpty()) {
             NodeHeuristic current = openSet.poll();
-            Node currentNode = current.getNode();
+            int currentNode = current.nodeId();
 
             if (visited.contains(currentNode)) continue;
 
             visited.add(currentNode);
             visitedOrder.add(currentNode);
 
-            if (currentNode.equals(end)) {
-                break;
+            if (currentNode == end) break;
+
+            EdgeIterator it = explorer.setBaseNode(currentNode);
+            while (it.next()) {
+                int neighbor = it.getAdjNode();
+
+                if (visited.contains(neighbor)) continue;
+
+                cameFrom.putIfAbsent(neighbor, currentNode);
+                distance.putIfAbsent(
+                        neighbor,
+                        distance.get(currentNode) + it.getDistance()
+                );
+
+                openSet.add(new NodeHeuristic(
+                        neighbor,
+                        heuristic(neighbor, end, nodeAccess)
+                ));
             }
-
-            for (Edge edge : graph.getNeighbors(currentNode)) {
-                Node neighbor = edge.getTarget();
-                if (!visited.contains(neighbor)) {
-                    previous.putIfAbsent(neighbor, currentNode);
-                    openSet.offer(new NodeHeuristic(neighbor, heuristic(neighbor, end)));
-                }
-            }
         }
 
-        List<Node> path = reconstructPath(previous, start, end);
-        double distance = calculatePathDistance(graph, path);
+        List<Integer> path = reconstructPath(cameFrom, start, end);
 
-        return new PathResult(path, visitedOrder, distance);
+        return new PathResult(
+                path,
+                visitedOrder,
+                distance.getOrDefault(end, 0.0)
+        );
     }
 
-    private static double heuristic(Node a, Node b) {
-        double R = 6371000;
-        double lat1 = Math.toRadians(a.getLat());
-        double lat2 = Math.toRadians(b.getLat());
-        double dLat = Math.toRadians(b.getLat() - a.getLat());
-        double dLon = Math.toRadians(b.getLon() - a.getLon());
 
-        double hav = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-                Math.cos(lat1) * Math.cos(lat2) *
-                        Math.sin(dLon / 2) * Math.sin(dLon / 2);
+    private static double heuristic(int a, int b, NodeAccess na) {
+        double lat1 = Math.toRadians(na.getLat(a));
+        double lon1 = Math.toRadians(na.getLon(a));
+        double lat2 = Math.toRadians(na.getLat(b));
+        double lon2 = Math.toRadians(na.getLon(b));
 
-        double c = 2 * Math.atan2(Math.sqrt(hav), Math.sqrt(1 - hav));
-        return R * c;
+        double dLat = lat2 - lat1;
+        double dLon = lon2 - lon1;
+
+        double h = Math.sin(dLat / 2) * Math.sin(dLat / 2)
+                + Math.cos(lat1) * Math.cos(lat2)
+                * Math.sin(dLon / 2) * Math.sin(dLon / 2);
+
+        return 2 * 6371000 * Math.atan2(Math.sqrt(h), Math.sqrt(1 - h));
     }
 
-    private static List<Node> reconstructPath(Map<Node, Node> previous, Node start, Node end) {
-        List<Node> path = new ArrayList<>();
-        Node current = end;
+    private static List<Integer> reconstructPath(
+            Map<Integer, Integer> cameFrom,
+            int start,
+            int end
+    ) {
+        LinkedList<Integer> path = new LinkedList<>();
+        Integer curr = end;
 
-        while (current != null) {
-            path.add(0, current);
-            current = previous.get(current);
+        while (curr != null) {
+            path.addFirst(curr);
+            curr = cameFrom.get(curr);
         }
 
-        return path.isEmpty() || !path.get(0).equals(start) ? new ArrayList<>() : path;
+        return path.getFirst() == start ? path : List.of();
     }
 
-    private static double calculatePathDistance(Graph graph, List<Node> path) {
-        double total = 0;
-        for (int i = 0; i < path.size() - 1; i++) {
-            total += heuristic(path.get(i), path.get(i + 1));
-        }
-        return total;
-    }
-
-    private static class NodeHeuristic {
-        private final Node node;
-        private final double heuristic;
-
-        public NodeHeuristic(Node node, double heuristic) {
-            this.node = node;
-            this.heuristic = heuristic;
-        }
-
-        public Node getNode() { return node; }
-        public double getHeuristic() { return heuristic; }
-    }
 }
